@@ -4,6 +4,9 @@
 #include <xorg-config.h>
 #endif
 
+#include <errno.h>
+#include <string.h>
+
 #include "xf86.h"
 #include "xf86_OSproc.h"
 #include "xf86Pci.h"
